@@ -133,7 +133,7 @@ enum FeatureFlag: Int, CaseIterable {
         case .compliancePopover:
             return true
         case .domainFocus:
-            return false
+            return true
         }
     }
 
